# multi-time

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AGENTS.md  README.md  api_reference.md  architecture.md  configuration.md  examples.md
docs/guides/: README.md  loading_data.md  modeling_guide.md  scripts_reference.md  visualization_and_analysis.md
docs/modules/: README.md  config.md  data.md  evaluate.md  modeling.md  pipeline.md  stats.md  transform.md  validate.md  visualization.md
docs/technical/: README.md  notation.md  schema_and_api.md  sktime_integration.md  time_series_theory.md
scripts/: AGENTS.md  README.md  run_all.py  run_analysis.py  run_descriptive.py  run_end_to_end.py  run_forecast.py  run_multi_series.py  run_pipeline.py  run_synthetic.py  run_validation.py
src/: AGENTS.md  README.md
src/multi_time/: AGENTS.md  README.md  __init__.py
src/multi_time/config/: AGENTS.md  README.md  __init__.py  logging.py  settings.py
src/multi_time/data/: AGENTS.md  README.md  __init__.py  generators.py  generators_core.py  generators_specialty.py  loaders.py
src/multi_time/evaluate/: AGENTS.md  README.md  __init__.py  metrics.py
src/multi_time/modeling/: AGENTS.md  README.md  __init__.py  ensemble.py  evaluation.py  forecasters.py  probabilistic.py  registry.py
src/multi_time/pipeline/: AGENTS.md  README.md  (+1 more)
tests/: AGENTS.md  README.md  conftest.py
tests/config/: test_config.py
tests/data/: test_data.py
tests/evaluate/: test_metrics.py
tests/modeling/: test_forecasters.py  test_probabilistic.py
tests/pipeline/: test_pipeline.py
tests/stats/: test_descriptive.py  test_statistical_tests.py
tests/transform/: test_transformers.py
tests/validate/: test_validators.py
tests/visualization/: test_visualization.py
(+32 files in other folders)
